--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-<p>Hello, world.</p>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+    	<meta charset="utf-8">
+    	<meta name="description" content="Jeanine Rees">
+
+		<title>Jeanine Rees</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,800' rel='stylesheet' type='text/css'>
+
+		<!-- external CSS link -->
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+
+	<body>
+		<header>
+			<h1>Jeanine Rees</h1>
+
+			<nav>
+				<a>Design</a>
+				<a>Editing</a>
+				<a>Other Projects</a>
+				<a>About</a>
+				<a>Contact</a>
+			</nav>
+
+		</header>
+
+		<main>
+			<div id="blurb">
+				<a><img src="#" alt="Pithy Image">Pithy image</a>
+				<p>Pithy statement</p>
+			</div>
+
+			<div id="design">
+				<h2>Design</h2>
+					<a><img src="#" alt="Posters and Promotional"></a>
+
+					<a><img scr="#" alt="Books and Brochures"></a>
+
+					<a><img src="#" alt="Logos"></a>
+
+					<a><img src="#" alt="Fun Stuff"></a>
+			</div>
+
+			<div id="editing">
+				<h2>Editing</h2>
+					<p>Spiel</p>
+			</div>
+
+			<div id="otherProjects">
+				<h2>Other Projects</h2>
+
+					<a href="http://museumdogs.tumblr.com"><img src="#" alt="Museum Dogs"></a>
+					<p>Text about Museum Dogs</p>
+
+					<a href="https://soundcloud.com/yunkstahn-1" alt="Yunkstahn on SoundCloud"><img src="#" alt="Yunkstahn on SoundCloud"></a>
+					<p>Text about Yunkstahn on SoundCloud</p>
+			</div>
+
+			<div id="about">
+				<h2>About</h2>
+					<img src="#" alt="Little ol' me">
+
+					<p>About me</p>
+			</div>
+
+			<div id="contact">
+				<h2>Contact</h2>
+					<p>Contact info</p>
+			</div>
+
+		</main>
+
+	<footer>
+		<p>Whatever goes here</p>
+	</footer>
+
+
+
+
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="js/scripts.js"></script>
+
+	</body>
+</html>
