--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
 		 <meta name="viewport" content="width=device-width, initial-scale=1">
 		  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+		  <!-- 
+		  	You're calling jQuery and Bootstrap at the bottom of this file too.  No need for that; they should only
+		  	be called once.
+		  -->
 		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
@@ -42,6 +47,10 @@
     		</div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
+    <!-- 
+    	This navigation is not closing on smaller screens.  I think the format of the HTML is not what bootstrap
+    	is expecting; take a look at http://getbootstrap.com/components/#navbar 
+    -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
 		        <li class="active"><a href="#design">Design<span class="sr-only">(current)</span></a></li>
@@ -234,6 +243,11 @@
 	</div><!-- /.container-->
 
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+	<!--
+		Remember - your own Javascript file should always be called last, since it could be dependent on Bootstrap (as 
+		well as jQuery).
+	-->
 	<script src="js/scripts.js"></script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
