A few more changes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
 		<!-- external CSS link -->
 
-		 <meta name="viewport" content="width=device-width, initial-scale=1">
-		  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-		  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 		<link rel="stylesheet" href="modaal/css/modaal.css" media="screen">
 		<link rel="stylesheet" href="css/style.css">
@@ -25,7 +24,7 @@
 	<body>
 	<div class="container">
 		<nav class="navbar navbar-default navbar-fixed-top">
-		<header class="row">
+		<header>
 
 			<h1><a href="#">Jeanine Rees</a></h1>
 
@@ -55,15 +54,15 @@
 
 		</header>
 
-		<main class="row">
-			<div id="blurb" class="row">		
-					<p id="tagline">Say, what&#8217;s the big idea?</p>
+		<main>
+			<div id="blurb">		
+					<p id="tagline">Say, what&#8217;s the big idea?!</p>
 					<span id="star">* * *</span>
 				    <p>I’m a designer, editor, and your go-to gal for anything related to words and pictures.</p>
 				    <p>Ideas—I’ve got a million of ’em!</p>
 			</div>
 				<span class="anchor" id="design"></span>
-				<div class="row">
+				<div>
 						<div id="designContent">
 						
 							<ul>
@@ -174,16 +173,16 @@
 				</div>
 
 				<span class="anchor" id="other"></span>
-				<div id="otherProjects">
-						<div id="otherContent" class="row">
+				<div id="otherProjects" class="row">
+						<div id="otherContent">
 							<div id="otherThing1">
 								<p><a id="rye">Editing</a> is also my racket. As an editor, I am comfortable with text of all sorts, from lengthy narratives to presentations to promotional copy. I shape tone, clarify ideas, define key messages, and make specialized or complex information accessible to readers. Correct grammar and style, consistency, accuracy, clarity, and objectivity are of paramount importance to me. When dealing with authors, I emphasize working together in a collegial and productive way in order to achieve the best possible finished product.</p>
 							</div>
 						</div>
 
-						<div class="row" id="otherThings" >
+						<div id="otherThings" >
 
-							<div id="otherThing2" class="postcard-left">
+							<div id="otherThing2">
 								<a href="http://museumdogs.tumblr.com" alt="Museum Dogs"><img src="images/MuseumDogs.jpg" alt="Museum Dogs"></a>
 								<p><a id="rye">Museum Dogs</a> is a blog about art history and dogs. Fun and a little scholarly!</p>
 							</div>
@@ -217,7 +216,7 @@
 						</div>
 				</div>
 				
-				<div id="contact" class="row">
+				<div id="contact">
 					<div id="contactContent">
 						<p>Drop me a line at jeanine.rees@gmail.com.</p>
 						<p>Or look me up on Linkedin at <a href="www.linkedin.com/in/jeanine-rees">www.linkedin.com/in/jeanine-rees</a>.</p>
@@ -225,7 +224,7 @@
 				</div>
 		</main>
 
-	<footer class="row">
+	<footer>
 		<p>&copy; Jeanine Rees 2016.</p>
 		<p>All rights reserved.</p>
 	</footer>
@@ -234,11 +233,12 @@
 	</div><!-- /.container-->
 
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="js/scripts.js"></script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 	<script src="modaal/js/modaal.js" type="text/javascript"></script>
+
+	<script src="js/scripts.js"></script>
 
 	</body>
 </html>
