--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				<span class="anchor" id="about"></span>
 				<div id="aboutMe" class="row">
 						<div id="aboutContent">
-							<div class="col-md-offset-2 col-md-5" id="spiel">
+							<div class="col-md-offset-2 col-md-6" id="spiel">
 								<p>Words, pictures, words and pictures, words as pictures—I love them. I am drawn to clean lines, strong contrasts, bold forms, and designs that evoke a particular time period.</p>
 	 
 								<p>My goal is to create pieces that are clear and engaging, in which the design serves the message.</p>
@@ -206,7 +206,7 @@
 
 								<p>For fun, I like to watch British cop dramas, read Raymond Chandler novels, and hang out with my toy fox terrier. </p>
 							</div>
-							 <div class="col-md-2" id="me" class="figure">
+							 <div class="col-md-2 col-md-offset-2" id="me" class="figure">
 							<img src="images/mesmall.png" alt="Little old me">
 							<figcaption class="figure-caption text-xs-center">Yours truly.</figcaption>
 							</div>
