--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
 				<span class="anchor" id="other"></span>
 				<div id="otherProjects" class="row">
 						<div id="otherContent">
-							<div id="otherThing1">
+							<div id="otherThing1" class="col-md-6 col-md-offset-2">
 								<p><a id="rye">Editing</a> is also my racket. As an editor, I am comfortable with text of all sorts, from lengthy narratives to presentations to promotional copy. I shape tone, clarify ideas, define key messages, and make specialized or complex information accessible to readers. Correct grammar and style, consistency, accuracy, clarity, and objectivity are of paramount importance to me. When dealing with authors, I emphasize working together in a collegial and productive way in order to achieve the best possible finished product.</p>
 							</div>
 						</div>
 
-						<div id="otherThings" >
+						<div id="otherThings" class="col-md-4">
 
 							<div id="otherThing2">
 								<a href="http://museumdogs.tumblr.com" alt="Museum Dogs"><img src="images/MuseumDogs.jpg" alt="Museum Dogs"></a>
