--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 	<footer>
 		<p>&copy; Jeanine Rees 2016.</p>
 		<p>All rights reserved.</p>
+		<p>(This is my first go at making a website from scratch. It was the final project for a class, Front-End Web Development, at General Assembly in Washington, D.C.)
 	</footer>
 
 
