--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
 				<span class="anchor" id="other"></span>
 				<div id="otherProjects" class="row">
 						<div id="otherContent">
-							<div id="otherThing1" class="col-md-6 col-md-offset-2">
+							<div id="otherThing1" >
 								<p><a id="rye">Editing</a> is also my racket. As an editor, I am comfortable with text of all sorts, from lengthy narratives to presentations to promotional copy. I shape tone, clarify ideas, define key messages, and make specialized or complex information accessible to readers. Correct grammar and style, consistency, accuracy, clarity, and objectivity are of paramount importance to me. When dealing with authors, I emphasize working together in a collegial and productive way in order to achieve the best possible finished product.</p>
 							</div>
 						</div>
 
-						<div id="otherThings" class="col-md-4">
+						<div id="otherThings" >
 
 							<div id="otherThing2">
 								<a href="http://museumdogs.tumblr.com" alt="Museum Dogs"><img src="images/MuseumDogs.jpg" alt="Museum Dogs"></a>
@@ -195,7 +195,7 @@
 				<span class="anchor" id="about"></span>
 				<div id="aboutMe" class="row">
 						<div id="aboutContent">
-							<div class="col-md-offset-2 col-md-6" id="spiel">
+							<div class="col-md-offset-2 col-md-5" id="spiel">
 								<p>Words, pictures, words and pictures, words as pictures—I love them. I am drawn to clean lines, strong contrasts, bold forms, and designs that evoke a particular time period.</p>
 	 
 								<p>My goal is to create pieces that are clear and engaging, in which the design serves the message.</p>
@@ -206,7 +206,7 @@
 
 								<p>For fun, I like to watch British cop dramas, read Raymond Chandler novels, and hang out with my toy fox terrier. </p>
 							</div>
-							 <div class="col-md-2 col-md-offset-2" id="me" class="figure">
+							 <div class="col-md-2 col-md-offset-3" id="me" class="figure">
 							<img src="images/mesmall.png" alt="Little old me">
 							<figcaption class="figure-caption text-xs-center">Yours truly.</figcaption>
 							</div>
